--- a/src/app/pages/future-crops/future-crops.page.html
+++ b/src/app/pages/future-crops/future-crops.page.html
@@ -1,19 +1,43 @@
-<ion-content>
-    <ion-card style="border-radius: 15px; margin-top: 1px !important;">
-        <ion-card-header>
-            <ion-card-title class="title-primary">Future Crops</ion-card-title>
-        </ion-card-header>
+<ion-content [fullscreen]="true">
+    <div>
+        <ion-grid>
+            <ion-row>
+                <ion-col size="auto">
+                    <ion-button size="small" shape="round" color="medium" style="margin: 0 0 0 0 !important; "
+                        (click)="changeDate(-1)">
+                        <ion-icon slot="icon-only" name="chevron-back-outline"></ion-icon>
+                    </ion-button>
+                </ion-col>
+                <ion-col class="title-primary"
+                    style="display: block; text-align: center !important; font-size: 18px; background: rgb(105,105,105, 0.2); border-radius: 15px; padding: 10px 0 0 0;">
+                    {{year}}
+                </ion-col>
+                <ion-col size="auto">
+                    <ion-button size="small" shape="round" color="medium" style="margin: 0 0 0 0 !important; "
+                        (click)="changeDate(1)">
+                        <ion-icon slot="icon-only" name="chevron-forward-outline"></ion-icon>
+                    </ion-button>
+                </ion-col>
+            </ion-row>
 
-        <ion-card-content style="padding: 0 0 20px 0 !important">
-            <swiper-container [pagination]="false" [slidesPerView]="2" [spaceBetween]="0">
-                <swiper-slide *ngFor="let product of products">
-                    <ion-card style="margin: 1px 5px 1px 5px !important;">
-                        <ion-card-content style="width: 100%; height: 140px; padding: 0 !important;">
+            <ion-row>
+                <ion-col *ngFor="let obj of months; let i = index;" class="no-padding">
+                    <ion-button class=" button-default" [class]="obj.selected ? 'selected' : ''" fill="solid"
+                        style="width: 100%; min-width: 120px !important;" (click)="select(i)">
+                        <span>{{obj.month.substring(0, 3)}}</span>
+                    </ion-button>
+                </ion-col>
+            </ion-row>
+
+            <ion-row>
+                <ion-col *ngFor="let product of products; let i = index;">
+                    <ion-card style="border-radius: 15px;">
+                        <ion-card-content [ngStyle]="{ 'width' : '380px' }">
                             <ion-grid>
                                 <ion-row>
                                     <ion-col size="auto" class="no-padding" style="padding: 0 0 0 5px !important;">
                                         <ion-avatar style="width: 30px !important; height: 30px !important;">
-                                            <img alt="Silhouette of a person's head" [src]="product.image"
+                                            <img alt="" [src]="product.user_image"
                                                 onerror="this.src='https://ionicframework.com/docs/img/demos/avatar.svg'" />
                                         </ion-avatar>
                                     </ion-col>
@@ -24,7 +48,7 @@
                                                     {{product.seller_name}}
                                                 </ion-col>
                                             </ion-row>
-                                            <ion-row>
+                                            <ion-row class="no-padding">
                                                 <ion-col style="padding: 0 !important;">
                                                     <ion-grid style="margin: 0px !important; padding: 0px !important;">
                                                         <ion-row>
@@ -40,15 +64,34 @@
                                                 </ion-col>
                                             </ion-row>
                                         </ion-grid>
-
+                                    </ion-col>
+                                    <ion-col size="auto" class="no-padding" style="padding: 0 0 0 5px !important;">
+                                        <ion-grid>
+                                            <ion-row>
+                                                <ion-col size="auto">
+                                                    <ion-button size="small" fill="outline" color="success"
+                                                        style="margin: 0 0 0 0 !important; ">
+                                                        <ion-icon slot="icon-only"
+                                                            name="chatbubble-ellipses-outline"></ion-icon>
+                                                    </ion-button>
+                                                    <ion-button size="small" fill="outline" color="success"
+                                                        style="margin: 0 0 0 5px !important; ">
+                                                        View Shop
+                                                    </ion-button>
+                                                </ion-col>
+                                            </ion-row>
+                                        </ion-grid>
+                                        <!-- 
+                                         -->
                                     </ion-col>
                                 </ion-row>
 
                                 <ion-row style="margin: 10px 0 0 0;">
                                     <ion-grid style="margin: 0px !important; padding: 0px !important;">
-                                        <ion-row>
+                                        <ion-row style="padding: 0 !important;">
                                             <ion-col size="auto" class="no-padding">
-                                                <p style="font-size: 18px; font-weight: bold;">{{product.name}}</p>
+                                                <span
+                                                    style="font-size: 25px; font-weight: bold;">{{product.name}}</span>
                                             </ion-col>
                                         </ion-row>
                                         <ion-row>
@@ -64,13 +107,28 @@
                                                 {{product.date_available | date : 'MMM YYYY'}}
                                             </ion-col>
                                         </ion-row>
+                                        <ion-row>
+                                            <ion-col size="auto" class="no-padding" style="font-size: 12px;">
+                                                <span style="font-weight: bold;">Estimated Price:</span>&nbsp;
+                                                {{product.currency_symbol}} {{product.price_from}} per
+                                                {{product.measurement_symbol}}
+                                            </ion-col>
+                                        </ion-row>
+                                        <ion-row style="margin: 5px 0 0 0;">
+                                            <ion-col size="auto" class="no-padding">
+                                                <img style="height: 300px;" [style]="'width:' + screen.width + 'px'"
+                                                    alt="" [src]="product.product_image"
+                                                    onerror="this.src='https://ionicframework.com/docs/img/demos/avatar.svg'" />
+                                            </ion-col>
+                                        </ion-row>
                                     </ion-grid>
                                 </ion-row>
                             </ion-grid>
                         </ion-card-content>
                     </ion-card>
-                </swiper-slide>
-            </swiper-container>
-        </ion-card-content>
-    </ion-card>
+                </ion-col>
+            </ion-row>
+        </ion-grid>
+    </div>
+
 </ion-content>
