--- a/src/app/tabs/products/products.page.html
+++ b/src/app/tabs/products/products.page.html
@@ -1,13 +1,15 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>products</ion-title>
-  </ion-toolbar>
-</ion-header>
+<app-header></app-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">products</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content>
+    <ion-tabs>
+        <ion-tab-bar slot="top">
+            <ion-tab-button tab="future_crops">
+                <ion-label style="font-size: 18px; font-weight: bold;">Future Crops</ion-label>
+            </ion-tab-button>
+
+            <ion-tab-button tab="looking_for">
+                <ion-label style="font-size: 18px; font-weight: bold;">Looking For</ion-label>
+            </ion-tab-button>
+        </ion-tab-bar>
+    </ion-tabs>
 </ion-content>
