--- a/src/global.scss
+++ b/src/global.scss
@@ -71,3 +71,39 @@ ion-modal ion-toolbar {
     color: #008c49;
     font-weight: bold;
 }
+
+:root {
+    ion-tab-button {
+
+        ion-icon,
+        ion-label {
+            color: grey !important;
+            --ion-color-base: grey !important;
+        }
+    }
+
+    ion-tab-button.tab-selected {
+
+        ion-icon,
+        ion-label {
+            color: #418949 !important;
+            --ion-color-base: #418949 !important;
+        }
+    }
+}
+
+ion-button.button-default {
+    --background: #418949;
+    --background-hover: #254f2a;
+    --background-activated: #254f2a;
+    --background-focused: #254f2a;
+
+    --color: white;
+
+    --border-radius: 10px;
+
+    --box-shadow: 0 2px 6px 0 rgb(0, 0, 0, 0.25);
+
+    --padding-top: 10px;
+    --padding-bottom: 10px;
+}
