--- a/src/app/pages/auth/login/login.page.html
+++ b/src/app/pages/auth/login/login.page.html
@@ -61,6 +61,34 @@
             </ion-row>
         </ion-grid>
     </div>
+
+    <jeep-sqlite *ngIf="isWeb"></jeep-sqlite>
+
+    <!-- Lista de todos los elementos -->
+    <ion-list>
+        <ion-item-sliding *ngFor="let user of users">
+
+            <!-- elemento -->
+            <ion-item>
+                <ion-label>{{user.first_name}}</ion-label>
+            </ion-item>
+
+            <!-- opciones -->
+            <ion-item-options>
+                <!-- <ion-item-option color="warning" (click)="update(language)">
+                    <ion-icon name="pencil-outline" slot="icon-only"></ion-icon>
+                </ion-item-option>
+                <ion-item-option color="danger" (click)="delete(language)">
+                    <ion-icon name="trash-outline" slot="icon-only"></ion-icon>
+                </ion-item-option> -->
+            </ion-item-options>
+
+        </ion-item-sliding>
+
+
+    </ion-list>
+
+
 </ion-content>
 <ion-footer>
     <ion-row style="margin: 20px 0 0 0;">
