Fixed SQLite Added Profile Page

--- a/src/app/pages/auth/login/login.page.html
+++ b/src/app/pages/auth/login/login.page.html
@@ -91,7 +91,7 @@
 
 </ion-content>
 <ion-footer>
-    <ion-row style="margin: 20px 0 0 0;">
+    <ion-row style="margin: 10px 0 10px 0;">
         <ion-col size="12" class="ion-text-center">
             <ion-title>Not yet a member?</ion-title>
         </ion-col>
