--- a/src/app/components/looking-for/looking-for.page.html
+++ b/src/app/components/looking-for/looking-for.page.html
@@ -1,6 +1,6 @@
 <ion-content>
-    <ion-card style="border-radius: 15px; margin-top: 1px !important;">
-        <ion-card-header>
+    <ion-card style="border-radius: 15px; margin-top: 1px !important; background-color: white;">
+        <ion-card-header (click)="goToLookingFor()">
             <ion-card-title class="title-primary">Looking For</ion-card-title>
         </ion-card-header>
 
