--- a/src/app/components/future-crops/future-crops.page.html
+++ b/src/app/components/future-crops/future-crops.page.html
@@ -1,13 +1,13 @@
 <ion-content>
-    <ion-card style="border-radius: 15px; margin-top: 1px !important;">
-        <ion-card-header>
+    <ion-card style="border-radius: 15px; margin-top: 1px !important; background-color: white;">
+        <ion-card-header (click)="goToFutureCrops()">
             <ion-card-title class="title-primary">Future Crops</ion-card-title>
         </ion-card-header>
 
-        <ion-card-content style="padding: 0 0 20px 0 !important">
+        <ion-card-content style="padding: 0 0 20px 0 !important; ">
             <swiper-container [slidesPerView]="2" [spaceBetween]="0">
-                <swiper-slide *ngFor="let product of products">
-                    <ion-card style="margin: 1px 5px 1px 5px !important;">
+                <swiper-slide *ngFor=" let product of products">
+                    <ion-card style="margin: 1px 5px 1px 5px !important; background-color: white;">
                         <ion-card-content style="width: 100%; height: 140px; padding: 0 !important;">
                             <ion-grid>
                                 <ion-row>
