--- a/src/global.scss
+++ b/src/global.scss
@@ -40,6 +40,10 @@ ion-header {
     --ion-background-color: #0A5028;
 }
 
+ion-content {
+    --ion-background-color: #f5f5f5;
+}
+
 ion-header ion-toolbar {
     --color: #fff;
 }
@@ -68,8 +72,12 @@ ion-modal ion-toolbar {
 }
 
 .title-primary {
-    color: #008c49;
-    font-weight: bold;
+    color: #088b44 !important;
+    font-weight: bold !important;
+}
+
+.text-grey {
+    color: #bbbbbb !important;
 }
 
 :root {
@@ -92,6 +100,13 @@ ion-modal ion-toolbar {
     }
 }
 
+.ion-color-success {
+    --ion-color-base: #088b44 !important;
+    --ion-color-contrast: #fff !important;
+    --ion-color-shade: #088b44 !important;
+    --ion-color-tint: #088b44 !important;
+}
+
 ion-button.button-default {
     --background: #418949;
     --background-hover: #254f2a;
@@ -106,4 +121,12 @@ ion-button.button-default {
 
     --padding-top: 10px;
     --padding-bottom: 10px;
+}
+
+ion-button {
+    text-transform: none;
+}
+
+ion-col.no-padding {
+    padding: 0px !important
 }
